--- a/hryar/templates/login.html
+++ b/hryar/templates/login.html
@@ -72,7 +72,7 @@
       <hr/>
       <div class="container">
         <label for="username"><strong>Email</strong></label>
-        <input type="text" placeholder="Enter Email" name="username" required>
+        <input type="text" placeholder="Enter username" name="username" required>
         <label for="password"><strong>Password</strong></label>
         <input type="password" placeholder="Enter Password" name="password" required>
       </div>
