--- a/hryar/templates/hryar/ListPositions.html
+++ b/hryar/templates/hryar/ListPositions.html
@@ -13,7 +13,7 @@
         <ul class="taskList">
         {% for position in positions %}
             <li class="taskItem">
-                <a href="/hryar/positions/{{ position.id }}/">{{ position.name }}: {{position.job_description}} </a>
+                <a href="/hryar/company/positions/{{ position.id }}/">{{ position.name }}: {{position.job_description}} </a>
             </li>
         {% endfor %}
         </ul>
