--- a/hryar/templates/login.html
+++ b/hryar/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple login form</title>
+    <title>Login</title>
     <link href="../static/hryar/form.css" rel="stylesheet">
   </head>
   <body>
@@ -14,5 +14,6 @@
         <input type="password" placeholder="Enter Password" name="password" required>
     <input class="submit_button" type="submit" value="Submit">
     </form>
+
   </body>
 </html>
