--- a/hryar/templates/home.html
+++ b/hryar/templates/home.html
@@ -2,8 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="../static/hryar/home.css" rel="stylesheet">
+    <title>Home</title>
 </head>
 <body>
+<div class="home_links">
+    <span class="home_header">Welcome!</span>
+    <div class="line"></div>
+    <div class="links">
+        <span><a class="link" href="http://localhost:8000/user/signup">Signup(User)</a></span>
+        <span><a class="link" href="http://localhost:8000/company/signup">Signup(Company)</a></span>
+        <span><a class="link" href="http://localhost:8000/login">Login</a></span>
+        <span><a class="link" href="http://localhost:8000/user/">Jobs</a></span>
+    </div>
+</div>
 </body>
 </html>
